# swachh-boudhik-yantra

./: .gitignore  CMakeLists.txt  README.md
arduino/swacch_robot/: swacch_robot.ino
include/: callbacks.hpp  gui.hpp  logger.hpp  serial_comm.hpp  system_state.hpp
scripts/: run.sh  setup.sh
src/: callbacks.cpp  gui.cpp  logger.cpp  main.cpp  serial_comm.cpp
